I have added a lot more styling to make sure that the settings and the device management section looks good on mobile

--- a/emberMetrics/src/index.css
+++ b/emberMetrics/src/index.css
@@ -90,16 +90,31 @@ main {
     display: flex;
     flex-direction: row;
     gap: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+.header__buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
 }
 
 @media (max-width: 800px) {
     .header__details {
         flex-direction: column;
-        gap: 0;
+        gap: 10px;
+    }
+    .header__device-name * {
+        margin: 0;
     }
 
     .header__details > * {
         margin: 0; /* remove default margins on children */
+    }
+    .header {
+        flex-direction: column;
+        gap: 10px;
     }
 }
 
@@ -133,11 +148,17 @@ main {
 }
 
 .general-button__clicked {
-    background-color: var(--highlight);
+    background-color: var(--neutral);
 }
 
 .general-button:hover {
-    background-color: var(--highlight);
+    background-color: var(--neutral);
+}
+
+@media (max-width: 700px) {
+    .general-button {
+        font-size: 22px;
+    }
 }
 
 
@@ -200,7 +221,7 @@ section {
     justify-content: flex-start;
     align-items: center;
     gap: 1rem;
-    width: 100%;
+    width: calc(100% - var(--element-padding));
     padding: var(--element-padding);
 }
 
@@ -209,8 +230,8 @@ section {
     font-weight: bold;
     border-right: 1px solid var(--border-color);
     padding-right: var(--element-padding);
-    min-width: 130px;
-    max-width: 130px;
+    min-width: 120px;
+    max-width: 120px;
     color: var(--secondary);
 }
 
@@ -282,7 +303,7 @@ section {
     font-size: var(--font-size-header);
 }
 
-.memory-info > div > h3 {
+.memory-info > div > h3, .memory-info > div > h2 {
     font-size: var(--font-size);
 }
 
@@ -338,7 +359,6 @@ section {
 .settings-header {
     width: 60%;
     padding: var(--element-padding);
-
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -347,7 +367,7 @@ section {
 }
 
 .settings {
-    width: 80%;
+    width: calc(100% - var(--section-padding));
     padding: var(--element-padding);
     display: flex;
     align-items: center;
@@ -359,19 +379,42 @@ section {
 }
 
 .settings-entry {
-    width: 70%;
+    width: 80%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     padding: var(--element-padding);
     border-radius: var(--border-radius);
 }
 
+.settings-entry__button-container {
+    display: flex;
+    flex-direction: row;
+}
+
 .settings-entry__label {
     border-right: 2px solid var(--border-color);
-    padding-right: 30px;
-    max-width: 130px;
+    margin-right: 30px;
+    max-width: 100px;
     min-width: 130px;
+    height: 2rem;
+}
+
+@media (max-width: 550px) {
+    .settings-entry {
+        flex-direction: column;
+        align-items: flex-start;
+        width: fit-content;
+        /*border-bottom: 2px solid var(--border-color);*/
+        border-radius: 0;
+        padding-bottom: 10px;
+    }
+    .settings-entry__label {
+        border-right: none;
+        margin-right: 0;
+        height: 2rem;
+    }
 }
 
 
@@ -388,9 +431,8 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
-    width: 80%;
-    border: 1px solid var(--border-color);
+    height: 100vh;
+    width: 100%;
     border-radius: var(--border-radius);
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
     background-color: var(--primary);
@@ -421,6 +463,7 @@ section {
     flex-direction: column;
     padding: 10px 20px 0 20px;
     justify-content: center;
+    width: calc(70% - 40px);
 }
 
 .device-management__form-container > button {
@@ -436,7 +479,7 @@ section {
 }
 
 .device-management__form-element > input {
-    width: inherit;
+    width: calc(100% - 20px);
     border: 1px solid var(--border-color);
     outline: none;
     border-radius: var(--border-radius);
@@ -456,12 +499,46 @@ section {
     text-align: center;
 }
 
-@media (max-width: 700px) {
+/*device lists*/
+.device-container {
+    display: flex;
+    flex-direction: column;
+    width: calc(70% - 40px);
+    padding: 20px;
+    gap: 10px;
+}
+
+.device-container__seperator {
+    height: 1px;
+    width: 90%;
+    border-bottom: 1px solid var(--border-color);
+    align-self: center;
+}
+
+.device-container__ipAddr {
+    background-color: var(--neutral);
+    padding: var(--element-padding);
+    font-size: 20px;
+    border-radius: var(--border-radius);
+    margin: 0;
+}
+
+.device-container__name {
+    margin: 0;
+}
+
+@media (max-width: 550px) {
     .device-management__form-element {
         display: flex;
         flex-direction: column;
         align-items: start;
         gap: 10px;
+    }
+    .device-management__form-container {
+        width: calc(100% - 40px);
+    }
+    .device-container {
+        width: calc(100% - 40px);
     }
 }
 
@@ -619,31 +696,4 @@ section {
     min-height: 50px;
     width: 300px;
     padding: 5px;
-}
-
-/*device lists*/
-.device-container {
-    display: flex;
-    flex-direction: column;
-    width: calc(100% - 40px);
-    padding: 20px;
-    gap: 10px;
-}
-
-.device-container__seperator {
-    height: 1px;
-    width: 90%;
-    border-bottom: 1px solid var(--border-color);
-}
-
-.device-container__ipAddr {
-    background-color: var(--neutral);
-    padding: var(--element-padding);
-    font-size: 20px;
-    border-radius: var(--border-radius);
-    margin: 0;
-}
-
-.device-container__name {
-    margin: 0;
 }
